plugins/mermaid/src/test/resources/intention/declarations/checkout.mermaid
gitgraph
  checkout <error descr="Unresolved branch">main</error>